# fastapi_tortoise_demo

./: pyproject.toml  requirements.txt
python/: .env  api.py  db.py  example.env  main.py  models.py  pagination.py  schemas.py  settings.py  utils.py
python/response/: __init__.py  base.py  exceptions.py  generic.py
