[tool.poetry]
name = "fastapidemo"
version = "0.1.0"
description = ""
authors = ["uuip <uuip@users.noreply.github.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[tool.poetry.dependencies]
python = "^3.10"
wheel = ">=0.40.0"
setuptools = ">=67.7.2"

pydantic = "^2.0.3"
pydantic-settings = "^2.0.2"
fastapi = "^0.100.0"
tortoise-orm = { extras = ["accel", "asyncpg"], version = ">=0.19.3" }
uvicorn = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
