[tool.poetry]
name = "fastapi-tortoise"
version = "0.1.0"
description = ""
authors = ["uuip <uuip@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "*"

pydantic = "^2.0.3"
pydantic-settings = "^2.0.2"
fastapi = "^0.100.0"
tortoise-orm = { extras = ["accel", "asyncpg"], version = ">=0.19.3" }
uvicorn = "^0.23.1"
tzdata = { version = "^2023.3", markers = "platform_system == 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
